--- a/_data/locales/en.yml
+++ b/_data/locales/en.yml
@@ -10,6 +10,7 @@ layout:
 # The tabs of sidebar
 tabs:
   # format: <filename_without_extension>: <value>
+  main: Main Page
   home: Home
   categories: Categories
   tags: Tags
