--- a/_data/locales/ko.yml
+++ b/_data/locales/ko.yml
@@ -10,7 +10,8 @@ layout:
 # The tabs of sidebar
 tabs:
   # format: <filename_without_extension>: <value>
-  home: 메인
+  main: 메인 페이지
+  home: 블로그 홈
   categories: 카테고리
   tags: 태그
   archives: 기록
