--- a/_posts/2024-09-04-iOS-week1.md
+++ b/_posts/2024-09-04-iOS-week1.md
@@ -40,14 +40,14 @@ for _ in 1...10 {
 
 ### 가장 많이 사용하는 프로그래밍 언어 10가지로 본 반복문
 
-1. Python
+- Python
 
 ```python
 for _ in range(10):
     print("Ki-Chang Kim")
 ```
 
-2. JavaScript
+- JavaScript
 
 ```javascript
 for (let i = 0; i < 10; i++) {
@@ -55,7 +55,7 @@ for (let i = 0; i < 10; i++) {
 }
 ```
 
-3. Java
+- Java
 
 ```java
 public class Main {
@@ -67,7 +67,7 @@ public class Main {
 }
 ```
 
-4. C#
+- C#
 
 ```csharp
 using System;
@@ -81,7 +81,7 @@ class Program {
 }
 ```
 
-5. C++
+- C++
 
 ```cpp
 #include <iostream>
@@ -95,7 +95,7 @@ int main() {
 }
 ```
 
-6. Ruby
+- Ruby
 
 ```ruby
 10.times do
@@ -103,7 +103,7 @@ int main() {
 end
 ```
 
-7. PHP
+- PHP
 
 ```php
 <?php
@@ -113,7 +113,7 @@ for ($i = 0; $i < 10; $i++) {
 ?>
 ```
 
-8. Swift
+- Swift
 
 ```swift
 for _ in 1...10 {
@@ -121,7 +121,7 @@ for _ in 1...10 {
 }
 ```
 
-9. Go
+- Go
 
 ```go
 package main
@@ -135,7 +135,7 @@ func main() {
 }
 ```
 
-10. Kotlin
+- Kotlin
 
 ```kotlin
 fun main() {
