--- a/_posts/2024-09-04-iOS-week1.md
+++ b/_posts/2024-09-04-iOS-week1.md
@@ -24,6 +24,44 @@ tags: [college, ios]
 
 ![week1-1](/assets/img/post/24-09-04/1.png){: width="1062" height="174"}
 
+## 앱 개발 기술
+
+### Native
+
+Android
+
+- Java (이전) / Kotlin (현재)
+
+iOS
+
+- Objective-C (이전) / Swift (현재)
+
+### Cross-Platform
+
+- React Native (Javascript)
+- Flutter (Dart)
+
+### Hybrid
+
+- Web View를 감싸고 있는 웹사이트
+- HTML+CSS+JS
+- Apache Cordova
+
+## Stack Overflow Trends
+
+- Flutter / React Native
+![week1-2](/assets/img/post/24-09-04/2.png){: width="753" height="496"}
+
+## iOS 개발자 Keyword
+
+- Swift
+- Objective-C
+- Storyboard
+- RESTful API
+- MVC, MVP, MVVM
+- Alamofire (통신)
+- ReactiveX (RxSwift)
+
 ## 반복문
 
 ### Swift
@@ -144,3 +182,18 @@ fun main() {
     }
 }
 ```
+
+## Mac
+
+### macOS의 버전 역사
+
+![week1-3](/assets/img/post/24-09-04/3.png){: width="405" height="406"}
+
+### Dock
+
+Windows에는 작업 표시줄이 있다면 macOS에는 Dock이 있다.
+각종 프로그램을 Dock에서 실행하거나 관리할 수 있다.
+
+### Mac 정보
+
+![week1-4](/assets/img/post/24-09-04/4.png){: width="599" height="321"}
