--- a/_posts/2024-09-11-iOS-week2.md
+++ b/_posts/2024-09-11-iOS-week2.md
@@ -35,3 +35,99 @@ tags: [college, ios]
 
 1. Command + Shift + 4
 2. Command + Shift + 4 + Space + 카메라 이동하여 해당 윈도우만 캡쳐
+
+## Flappy Bird Swift
+
+![week2-4](/assets/img/post/24-09-11/4.png){: width="870" height="761"}
+
+## Swift 개요
+
+### Swift Documents
+
+- [공식 문서 한국어 번역본](https://bbiguduk.gitbook.io/swift)
+- [raywenderlich.com Swift 스타일 가이드](https://github.com/swift-kr/swift-style-guide-raywenderlich/blob/master/ko_style_guide.md)
+
+### Swift Playground
+
+- Swift를 공부할 때는 Playground를 사용
+
+```swift
+import UIKit
+
+var greeting = "Hello, playground"
+print(greeting)
+```
+
+## Swift 문법
+
+### 데이터 타입
+
+- Swift에서의 초기값이 있는 변수 선언:
+
+```swift
+var myNumber = 10
+```
+
+1. 초기 값이 있을 경우 컴파일러가 타입 추론을 하므로 데이터 타입을 명시할 필요 없음.
+2. 초기 값이 없을 경우 데이터 타입을 명시해야함.
+
+- 데이터 타입 명시 방법:
+
+```swift
+var x : Int
+x = 10
+```
+
+- 주의: '=' 양쪽에 일관된 공백을 줘야함
+
+- 잘못된 예:
+
+```swift
+x= 10
+y =5
+```
+
+- 바른 예:
+
+```swift
+x=10
+y = 5
+```
+
+### 데이터 타입 종류
+
+|데이터 타입|설명|예시|
+|Int|정수형|let age: int = 30|
+|Double|배정밀도 실수형|let height: Double = 1.75|
+|Float|단정밀도 실수형|let pi: Float = 3.14|
+|String|문자열형|let greeting: String = "안녕하세요"|
+|Bool|불리언형 (참/거짓)|let isActive: Bool = true|
+|Array|배열형|let fruits: [String] = ["사과", "바나나", "체리"]|
+|Dictionary|키-값 쌍의 컬렉션|let person: [String: String] = ["이름": "민수", "직업": "개발자"]|
+|Set|중복을 허용하지 않는 집합형|let uniqueNumbers: Set<Int> = [1, 2, 3]
+
+#### Int (정수형)
+
+- 정수를 저장하는 데 사용
+- 8비트 (Int8), 16비트 (Int16), 32비트 (Int32), 64비트 (Int64) 지원
+- 부호 없는 정수 지원 (UInt8, UInt16, UInt32, UInt64)
+- Apple에서는 특정 크기 데이터 타입보다 Int 데이터 타입 사용 권장
+
+#### Character (문자 자료형)
+
+- '', ""의 용도 비교
+
+|프로그래밍 언어|'' (작은 따옴표)|"" (큰 따옴표)|
+|Python|문자열 리터럴로 사용, 이스케이프 없이 표현 가능|문자열 리터럴로 사용, 변수나 표현식을 포함할 수 있음 (포맷팅 가능)|
+|JavaScript|문자열 리터럴로 사용|문자열 리터럴로 사용, 템플릿 리터럴에서는 ${} 구문으로 표현식 삽입 가능|
+|Java|문자열 리터럴로 사용 (char는 작은 따옴표)|문자열 리터럴로 사용|
+|PHP|문자열 리터럴로 사용, 변수 확장 안 됨|문자열 리터럴로 사용, 변수 확장 가능|
+|Ruby|문자열 리터럴로 사용, 이스케이프 없이 표현 가능|문자열 리터럴로 사용, 표현식 삽입 가능|
+|C#|문자열 리터럴로 사용|문자열 리터럴로 사용, 이스케이프 문자를 포함할 수 있음|
+
+- Swift에서의 Character는 초깃값은 작은 ''(작은 따옴표)가 아닌 ""(큰 따옴표)를 사용
+
+#### String (문자열 자료형)
+
+- 문자열 보간 (String Interpolation) 비교
+
