--- a/_posts/2024-09-25-iOS-week4.md
+++ b/_posts/2024-09-25-iOS-week4.md
@@ -161,8 +161,8 @@ myCar.display();
 * 조건-증가 for문은 Swift 3에서 없어진 문법임.
 
 ```c
-for var i = 0; i < 10; i++ {
-    print(i)
+for int i = 0; i < 10; i++ {
+    printf(i)
 }
 ```
 
@@ -171,3 +171,164 @@ for i in 0..<10 {
     print(i)
 }
 ```
+
+* Swift에서는 _로 참조체 생략 가능
+
+### 제어문 주의사항
+
+```swift
+for i in 1..<10 {
+    if i > 5 break
+    print(i)
+}
+// 에러 발생
+
+// if문 다음의 실행 코드가 한줄이라도 괄호를 필수적으로 사용해야함.
+
+for i in 1..<10 {
+    if i > 5 {
+        break
+    }
+    print(i)
+}
+```
+
+### IF 문 조건에서 콤마: 조건나열 (Condition-List)
+
+![week4-3](/assets/img/post/24-09-25/3.png)
+
+### Switch-Case 문
+
+![week4-4](/assets/img/post/24-09-25/4.png)
+
+* 각 case문 마지막에 break가 자동으로 들어가 있으므로 break를 직접 넣어줄 필요가 없음.
+* case문 안에 실행 문장이 없을 경우 에러가 발생함.
+
+#### 범위 지정 매칭
+
+![week4-5](/assets/img/post/24-09-25/5.png)
+
+#### Where 절
+
+* Switch-Case 문에 부가적인 조건을 추가하기 위해 사용
+* 값이 속하는 범위뿐만 아니라 그 숫자가 홀수인지 짝수인지도 검사
+
+```swift
+var temperature = 60
+switch (temperature) {
+    case 0...49 where temperature % 2 == 0:
+        print("Cold and even")
+    case 50...79 where temperature % 2 == 0:
+        print("Warm and even")
+    case 80...110 where temperature % 2 == 0:
+        print("Hot and even")
+    default:
+        print("Temperature out of range or odd")
+}
+```
+
+* 특정 패턴과 결합하여 조건을 추가할 수 있음
+
+```swift
+var numbers: [Int] = [1, 2, 3, 4, 5]
+for num in numbers where num > 3 {
+    print(num)
+}
+```
+
+#### Fallthrough
+
+* C / C++, Objective-C와 달리 case 문 다음에 break 문을 포함할 필요가 없음
+* Swift에서는 일치하는 case 문을 만나면 자동으로 빠져나옴
+* case 별로 빠져나가지 않고 아래로 계속 내려가게 하려면 fallthrough 문 사용
+
+```swift
+var value = 4
+switch (value) {
+    case 4:
+        print("4")
+        fallthrough
+    case 3:
+        print("3")
+        fallthrough
+    case 2:
+        print("2")
+        fallthrough
+    default:
+        print("1")
+}
+```
+
+### Swift에서 많이 사용하는 제어문
+
+* 조건문 (if-else)
+
+```swift
+let score = 85
+
+if score >= 90 {
+    print("A")
+} else if score >= 80 {
+    print("B")
+} else if score >= 70 {
+    print("C")
+} else {
+    print("D")
+}
+```
+
+* switch 문
+
+```swift
+let day = 3
+
+switch day {
+case 1:
+    print("월요일")
+case 2:
+    print("화요일")
+case 3:
+    print("수요일")
+case 4:
+    print("목요일")
+case 5:
+    print("금요일")
+default:
+    print("주말")
+}
+```
+
+* 반복문 (for-in)
+
+```swift
+let numbers = [1, 2, 3, 4, 5]
+
+for number in numbers {
+    print(number)
+}
+```
+
+* while 문
+
+```swift
+var count = 0
+
+while count < 5 {
+    print("Count is \(count)")
+    count += 1
+}
+```
+
+* repeat-while 문
+
+```swift
+var count = 0
+
+repeat {
+    print("Count is \(count)")
+    count += 1
+} while count < 5
+```
+
+## 옵셔널 (Optional)
+
