--- a/_posts/2024-09-25-iOS-week4.md
+++ b/_posts/2024-09-25-iOS-week4.md
@@ -332,3 +332,16 @@ repeat {
 
 ## 옵셔널 (Optional)
 
+### Int형 vs Optional Int형
+
+* 10
+    - Int
+        + Int형 값을 저장
+        + var x : Int = 10 // x?
+
+* Optional(10)
+    - Int?
+    - Int!
+        + Int형 값을 저장 or 값이 없음 (nil)
+        + var y : Int? = 10 // y?
+        + var z : Int! // z?
