--- a/_posts/2024-09-25-iOS-week4.md
+++ b/_posts/2024-09-25-iOS-week4.md
@@ -345,3 +345,21 @@ repeat {
         + Int형 값을 저장 or 값이 없음 (nil)
         + var y : Int? = 10 // y?
         + var z : Int! // z?
+
+### 강제 언래핑 (Forced Unwrapping)
+
+* 옵셔널 변수에 값이 있으면 옵셔널로 "래핑되었다(Wrapped)"고 함.
+* 옵셔널에 래핑된 값은 강제 언래핑 (Forced Unwrapping)으로 풀어줌.
+
+* 옵셔널형 선언: 자료형 뒤 ?
+* 옵셔널 언래핑 : 변수명 뒤 !
+
+```swift
+var x : Int? // 옵셔널 정수형 변수 x 선언
+x = 10
+
+print(x) // Optional(10)
+print(x!) // Forced Unwrapping해서 10이 나옴
+```
+
+![week4-6](/assets/img/post/24-09-25/6.png)
