--- a/_posts/2024-09-25-iOS-week4.md
+++ b/_posts/2024-09-25-iOS-week4.md
@@ -363,3 +363,18 @@ print(x!) // Forced Unwrapping해서 10이 나옴
 ```
 
 ![week4-6](/assets/img/post/24-09-25/6.png)
+
+* 옵셔널 바인딩 (Optional Binding)을 이용하여 옵셔널에 할당된 값을 임시 변수 또는 상수에 할당
+
+```swift
+if let constantname = optionalName {
+    // 옵셔널 변수가 값에 있으면 언래핑해서 일반 상수 constantname에 대입하고 if문 실행
+    // 값이 없을 시 if문의 조건이 거짓이 되어 if문을 실행하지 않음
+}
+
+if var variablename = optionalName {
+    // 옵셔널 변수가 값이 있다면 언래핑해서 일반 변수 variablename에 대입하고 if문 실행
+    // 값이 없을 시 if문의 조건이 거짓이 되어 if문을 실행하지 않음
+}
+```
+
