--- a/_posts/2024-09-25-iOS-week4.md
+++ b/_posts/2024-09-25-iOS-week4.md
@@ -355,7 +355,7 @@ repeat {
 * 옵셔널 언래핑 : 변수명 뒤 !
 
 ```swift
-var x : Int? // 옵셔널 정수형 변수 x 선언
+var x: Int? // 옵셔널 정수형 변수 x 선언
 x = 10
 
 print(x) // Optional(10)
@@ -378,3 +378,74 @@ if var variablename = optionalName {
 }
 ```
 
+* 다른 방법도 존재
+
+```swift
+if let optionalName = optionalName {
+    print(optionalName)
+}
+```
+
+* Swift 5.7부터 추가된 옵셔널 바인딩 방법
+
+```swift
+var x: Int?
+x = 10
+
+if let x {
+    print(x)
+}
+
+// 결과: 10
+```
+
+* 여러 옵셔널 변수를 한 번에 언래핑할 수 있음.
+
+```swift
+var pet1: String?
+var pet2: String?
+pet1 = "cat"
+pet2 = "dog"
+if let firstPet = pet1, let secondPet = pet2 {
+    print(firstPet, secondPet)
+} else {
+    print("nil")
+}
+```
+
+* 콤마를 사용하고 각 변수 별로 let or var 각각 사용해주어야 함.
+
+![week4-7](/assets/img/post/24-09-25/7.png)
+
+### 두 가지 옵셔널 타입
+
+* 옵셔널이 항상 유효한 값을 가질 경우 암묵적인 언래핑 (Implicitly Unwrapped) 옵셔널로 선언할 수도 있음.
+* 클래스의 아웃렛 변수 초기화에서 많이 사용됨. (자동 생성 코드)
+* 강제 언래핑이나 옵셔널 바인딩을 하지 않아도 값에 접근할 수 있음.
+* 암묵적인 언래핑으로 옵셔널 선언은 선언부에 물음표(?) 대신에 느낌표(!)를 사용.
+* 옵셔널로 사용할 수 없으면 자동으로 언래핑함.
+
+```swift
+var x: Int? // 옵셔널 변수 선언 방법 1
+var x: Int! // 옵셔널 변수 선언 방법 2, 암묵적인 언래핑 (Implicitly Unwrapped)
+```
+
+```swift
+var x: Int? = 10
+var y: Int! = 20
+var z: Int = 1
+
+print(x, y, z) // Optional(10) Optional(20) 1
+
+z = x!
+print(z) // 10
+
+z = y
+print(y) // 20
+
+if let x, let y {
+    print(x, y)
+} else {
+    print("nil")
+} // 10 20
+```
