--- a/_posts/2024-09-11-iOS-week2.md
+++ b/_posts/2024-09-11-iOS-week2.md
@@ -3,7 +3,7 @@ title: iOS 프로그래밍 2주차
 author: Ki-Chang Kim (Panther K)
 date: 2024-09-11 14:50 +0900
 categories: [College, iOS]
-tags: [college, ios]
+tags: [college, ios, swift]
 ---
 
 ## Mac Keyboard
