--- a/_posts/2024-09-04-iOS-week1.md
+++ b/_posts/2024-09-04-iOS-week1.md
@@ -3,7 +3,7 @@ title: iOS 프로그래밍 1주차 요약
 author: Ki-Chang Kim (Panther K)
 date: 2024-09-04 16:05 +0900
 categories: [College, iOS]
-tags: [college, ios]
+tags: [college, ios, swift]
 ---
 
 ## iOS vs Andorid
