--- a/_posts/2024-09-25-iOS-week4.md
+++ b/_posts/2024-09-25-iOS-week4.md
@@ -3,7 +3,7 @@ title: iOS 프로그래밍 4주차
 author: Ki-Chang Kim (Panther K)
 date: 2024-09-25 14:00 +0900
 categories: [College, iOS]
-tags: [college, ios]
+tags: [college, ios, swift]
 ---
 
 ## 연산자 (Operator)
