--- a/_posts/2024-09-25-iOS-week4.md
+++ b/_posts/2024-09-25-iOS-week4.md
@@ -53,6 +53,29 @@ result = x < y // True
 
 ![week4-1](/assets/img/post/24-09-25/1.png)
 
+### nil-coalescing operator (nil병합연산자) : ??
+
+* 옵셔널 변수 ?? nil 일 때 할당되는 값
+* 옵셔널 변수의 값이 nil이면 ?? 다음 값으로 할당됨.
+* 옵셔널 변수의 값이 nil이 아니면 언래핑된 값이 나옴.
+
+```swift
+let defaultAge = 1
+var age: Int?
+age = 3
+
+print(age) // Optional(3)
+
+var myAge = age ?? defaultAge
+
+print(myAge) 
+
+var x: Int? = 1
+var y = x ?? 0
+
+print(y) // 1
+```
+
 ## 클래스 vs 객체 vs 인스턴스
 
 ![week4-2](/assets/img/post/24-09-25/2.png)
@@ -448,4 +471,82 @@ if let x, let y {
 } else {
     print("nil")
 } // 10 20
+```
+
+### 옵셔널 언래핑 예시
+
+#### 강제 언래핑 (Forced Unwrapping)
+
+```swift
+var optionalString: String? = "Hello, Swift!"
+let unwrappedString: String = optionalString! // 강제 언래핑
+
+print(unwrappedString) // "Hello, Swift!"
+```
+
+#### 옵셔널 바인딩 (Optional Binding)
+
+* if let
+
+```swift
+var optionalString: String? = "Hello, Swift!"
+
+if let unwrappedString = optionalString {
+    print(unwrappedString) // "Hello, Swift!"
+} else {
+    print("optionalString is nil")
+}
+
+```
+
+* guard let
+
+``` swift
+func printString(optionalString: String?) {
+    guard let unwrappedString = optionalString else {
+        print("optionalString is nil")
+        return
+    }
+    print(unwrappedString) // "Hello, Swift!"
+}
+
+printString(optionalString: "Hello, Swift!")
+
+```
+
+#### nil 병합 연산자 (nil coalescing operator)
+
+```swift
+var optionalString: String? = nil
+let unwrappedString: String = optionalString ?? "Default Value"
+
+print(unwrappedString) // "Default Value"
+
+```
+
+#### 옵셔널 체이닝 (Optional Chaining)
+
+```swift
+class Person {
+    var name: String?
+}
+
+var person: Person? = Person()
+person?.name = "Alice"
+
+let nameLength = person?.name?.count // 옵셔널 체이닝 사용
+print(nameLength ?? 0) // 5 (nil일 경우 0 출력)
+
+```
+
+#### 옵셔널 타입 배열과 반복문
+
+```swift
+let optionalArray: [String?] = ["Alice", nil, "Bob"]
+
+for optionalName in optionalArray {
+    if let name = optionalName {
+        print(name) // "Alice"와 "Bob"만 출력됨
+    }
+}
 ```
