--- a/_posts/2024-10-15-iOS-week6.md
+++ b/_posts/2024-10-15-iOS-week6.md
@@ -305,3 +305,136 @@ func calcBMI(weight: Double, height: Double) -> String {
     }
 print(calcBMI(weight: 60.0, height: 170.0))
 ```
+
+## 1급 객체 (First Class Object) / 1급 시민 (First Class Citizen)
+
+* Swift의 함수는 1급 객체 (First Class Object) (또는 1급 시민(First Class Citizen))이다.
+* 다음의 조건을 충족하는 객체를 1급 객체라고 함.
+    1. 변수에 저장할 수 있음.
+    2. 매개변수로 전달할 수 있음.
+    3. 리턴 값으로 사용할 수 있음.
+
+### 1. 함수를 변수에 저장 가능
+
+* Swift는 함수를 데이터 타입처럼 처리할 수 있다.
+* 다음과 같이 함수를 상수 또는 변수에 할당하는 것이 가능하다.
+
+```swift
+func inchesToFeet(inches: Float) -> Float {
+    return inches * 0.0833333
+}
+
+let toFeet = inchesToFeet
+```
+
+* 원래의 함수 이름 대신에 상수 이름을 이용하여 호출할 수 있다.
+
+```swift
+print(inchesToFeet(inches: 10))
+print(toFeet(10))
+```
+
+### 2. 함수를 매개변수로 사용
+
+* 매개변수로 함수를 받으려면 함수를 받게 될 함수는 함수의 데이터 타입을 선언
+
+```swift
+func outputConversion(converterFunc: (Float) -> Float, value: Float) {
+    let result = converterFunc(value) // toFeet(10)
+    print("Result = \(result)")
+}
+
+outputConversion(converterFunc: toFeet, value: 10)
+```
+
+### 함수를 리턴 값으로 사용
+
+```swift
+// Boolean 매개변수의 값에 따라 toFeet 함수 또는 toYards 함수 반환
+
+func decideFunction (feet: Bool) -> (Float) -> Float {
+    if (feet) {
+        return toFeet
+    } else {
+        return toYards
+    }
+}
+```
+
+### 1급 객체 코드
+
+```swift
+func up(num: Int) -> Int {
+    return num + 1
+}
+
+func down(num: Int) -> Int {
+    return num - 1
+}
+
+let toUp = up
+print(up(num: 10)) // 11
+print(toUp(10)) // 11
+let toDown = down
+
+func upDown(Fun: (Int) -> Int, value: Int) {
+    let result = Fun(value)
+    print("결과 = \(result)") 
+}
+
+upDown(Fun: toUp, value: 10) // 결과 = 11
+upDown(Fun: toDown, value: 10) // 결과 = 9
+
+func decideFun(x: Bool) -> (Int) -> Int {
+    if (x) {
+        return toUp
+    } else {
+        return toDown
+    }
+}
+
+let r = decideFun(x: true)
+print(type(of: r)) // (Int) -> Int
+print(r(10)) // 11
+```
+
+## 클로저 (Closure)
+
+* C, C++, Objective-C의 Block, Java의 Lambda Function, C#의 Delegates와 같은 익명 함수
+* 클로저 표현식은 독립적인 코드 블록임.
+
+```swift
+func add(x: Int, y: Int) -> Int {
+    return(x + y)
+}
+
+print(add(x: 10, y: 20)) // 30
+
+let add1 = { (x: Int, y: Int) -> Int in
+    return(x + y)
+}
+
+print(add1(x: 10, y: 20)) // error: extraneous argument labels 'x:y:' in call
+print(add1(10, 20)) // 30
+print(type(of: add1)) // (Int, Int) -> Int
+```
+
+### 클로저 표현식
+
+* 클로저 표현식은 매개변수를 받거나 값을 반환하도록 만들 수 있다.
+
+```swift
+{(<매개변수 이름>: <매개변수 타입>, ...) -> <반환 타입> in
+    클로저 표현식 코드
+}
+```
+
+* 두 개의 정수 매개변수를 받은 뒤 정수 결과 값 반환
+
+```swift
+let multiply = { (val1: Int, val2: Int) -> Int in
+    return(val1 * val2)
+}
+
+let result = multiply(10, 20) // 200
+```
