--- a/_posts/2024-10-16-iOS-week7.md
+++ b/_posts/2024-10-16-iOS-week7.md
@@ -27,7 +27,7 @@ tags: [college, ios, swift]
     + 데이터 변수 (Data Variable) / 속성 (Property)
     + 함수 / 메서드 (Method)
 
-### 언어 별 클래스 / 인스턴스 생성 방법
+#### 언어 별 클래스 / 인스턴스 생성 방법
 
 * Swift
 
@@ -107,6 +107,236 @@ public:
 
 Dog myDog("Buddy");
 ```
+
+### Swift 클래스 선언
+
+```swift
+class 새로운 클래스 이름 : 부모 클래스 {
+    // 프로퍼티
+    // 인스턴스 메서드
+    // 타입(Type) 메서드 (클래스 메서드)
+}
+```
+
+* **프로퍼티** 부분은 클래스 내에 포함되는 변수(Var)와 상수(Let)를 정의
+* **인스턴스 메서드**는 객체가 호출하는 메서드를 정의
+* **타입 메서드**는 클래스가 호출하는 메서드를 정의
+
+### 클래스에 저장 프로퍼티 (Stored Property) 추가
+
+* 프로퍼티는
+    1. 초기 값이 있거나
+    2. Init을 이용해서 초기화하거나
+    3. 옵셔널 변수(상수)로 선언 (자동으로 Nil로 초기화)
+
+![week7-3](/assets/img/post/24-10-16/3.png)
+> 초기 값이 없을 경우 에러가 발생한다.
+
+```swift
+class Man {
+    var age: Int?
+    var height: Int?
+}
+```
+
+> 옵셔널 변수로 선언할 시 자동으로 Nil로 초기화되므로 에러가 발생하지 않는다.
+
+* 프로퍼티(Property)는 저장 프로퍼티 (Stored Property) / 계산 프로퍼티 (Computed Property)로 나누어짐.
+
+### 인스턴스 생성 후 메서드와 프로퍼티에 접근
+
+```swift
+class Man {
+    var age: Int = 1
+    var weight: Double = 3.5
+
+    func display() {
+        print("나이=\(age), 몸무게=\(weight)")
+    }
+}
+
+var kim: Man = Man()
+kim.display() // 나이=1, 몸무게=3.5
+print(kim.age) // 1
+```
+
+### 클래스 (Class or Type) 메서드
+
+> 클래스명.클래스메서드()
+
+* 타입 메서드 또는 클래스 메서드는 클래스 레벨에서 동작
+* 타입 메서드는 인스턴스 메서드와 동일한 방법으로 선언하지만 class나 static 키워드를 앞에 붙여서 선언
+* class 키워드로 만든 클래스 메서드는 자식 클래스에서 override 가능 함.
+
+```swift
+class Man {
+    var age: Int = 1
+    var weight: Double = 3.5
+
+    func display() {
+        print("나이=\(age), 몸무게=\(weight)")
+    }
+
+    class func cM() {
+        print("cM은 클래스 메서드입니다.")
+    }
+
+    class func scM() {
+        print("scM은 클래스 메서드 (Static)")
+    }
+}
+
+var kim: Man = Man()
+kim.display() // 나이=1, 몸무게=3.5
+kim.cM() // cM은 클래스 메서드입니다.
+kim.scM() // scM은 클래스 메서드 (Static)
+```
+
+### Initialization
+
+* 클래스, 구조체, 열거형 (Enum) 인스턴스가 생성되는 시점에서 해야 할 초기화 작업
+* 인스턴스가 만들어지면서 자동 호출
+
+* Init 메서드 (생성자)
+
+```swift
+init() { }
+```
+
+* Designated Initializer
+    + 모든 프로퍼티를 다 초기화시키는 생성자
+
+* init()을 하나라도 직접 만들면 기본적으로 만들어지는 눈에 안보이는 Default Initializer는 사라짐.
+
+* 소멸자
+    + 인스턴스가 사라질 때 자동 호출
+    + deinit{}
+
+```swift
+class Man {
+    var age: Int = 1
+    var weight: Double = 3.5
+
+    func display() {
+        print("나이=\(age), 몸무게=\(weight)")
+    }
+
+    init(yourAge: Int, yourWeight: Double) {
+        age = yourAge
+        weight = yourWeight
+    } // Designated Initializer
+}
+
+var kim: Man = Man(yourAge: 10, yourWeight: 20.5)
+kim.display() // 나이=10, 몸무게=20.5
+```
+
+### Self
+
+* 현재 클래스 내 메서드나 프로퍼티를 가리킬 때 메서드나 프로퍼티 앞에 self를 붙임.
+* 매개변수와 구분할 필요가 있을 땐 반드시 써야함.
+
+```swift
+class Man {
+    var age: Int = 1
+    var weight: Double = 3.5
+
+    func display() {
+        print("나이=\(age), 몸무게=\(weight)")
+    }
+
+    init(age: Int, weight: Double) {
+        self.age = age
+        self.weight = weight
+    }
+}
+
+var kim: Man = Man(age: 10, weight: 20.5)
+kim.display() // 나이=10, 몸무게=20.5
+```
+
+#### 언어 별 인스턴스 변수 참조 키워드
+
+|언어|키워드|
+|Swift|self|
+|Java|this|
+|C#|this|
+|JavaScript|this|
+|Python|self|
+|C++|this|
+
+### Method Overloading
+
+* 매개변수의 개수와 자료형이 다른 같은 이름의 함수를 여러 개 정의
+* 매개변수가 다른 두 생성자를 통해 두 가지 방법으로 인스턴스를 만들 수 있음.
+
+```swift
+class Man {
+    var age: Int = 1
+    var weight: Double = 3.5
+
+    func display() {
+        print("나이=\(age), 몸무게=\(weight)")
+    }
+
+    init(age: Int, weight: Double) {
+        self.age = age
+        self.weight = weight
+    }
+
+    init(age: Int) {
+        self.age = age
+    }
+}
+
+var kim: Man = Man(age: 10, weight: 20.5)
+var kim1: Man = Man(age: 10)
+
+kim.display() // 나이=10, 몸무게=20.5
+kim1.display() // 나이=10, 몸무게=3.5
+```
+
+#### UIImage 클래스의 Init의 Overloading
+
+![week7-4](/assets/img/post/24-10-16/4.png)
+
+##### 주로 사용되는 종류
+
+* 이름으로 이미지 초기화
+
+```swift
+let image = UIImage(named: "imageName")
+```
+
+* 데이터로 이미지 초기화
+
+```swift
+if let imageData = Data(contentsOf: url) {
+    let image = UIImage(data: imageData)
+}
+```
+
+* PDF로 이미지 초기화
+
+```swift
+let pdfImage = UIImage(named: "imageName", in: nil, compatibleWith: nil)
+```
+
+* CGImage로 이미지 초기화
+
+```swift
+let cgImage: CGImage = ... // CGImage 객체
+let image = UIImage(cgImage: cgImage)
+```
+
+* CIImage로 이미지 초기화
+
+```swift
+let ciImage: CIImage = ... // CIImage 객체
+let image = UIImage(ciImage: ciImage)
+```
+
+## 클래스 상속
 
 ### 언어 별 상속 선언 방법
 
@@ -226,42 +456,42 @@ Dog myDog;
 myDog.makeSound();  // 출력: Woof
 ```
 
-### Swift 클래스 선언
+### 부모 클래스와 자식 클래스
 
-```swift
-class 새로운 클래스 이름 : 부모 클래스 {
-    // 프로퍼티
-    // 인스턴스 메서드
-    // 타입(Type) 메서드 (클래스 메서드)
-}
-```
-
-* **프로퍼티** 부분은 클래스 내에 포함되는 변수(Var)와 상수(Let)를 정의
-* **인스턴스 메서드**는 객체가 호출하는 메서드를 정의
-* **타입 메서드**는 클래스가 호출하는 메서드를 정의
-
-### 클래스에 저장 프로퍼티 (Stored Property) 추가
-
-* 프로퍼티는
-    1. 초기 값이 있거나
-    2. Init을 이용해서 초기화하거나
-    3. 옵셔널 변수(상수)로 선언 (자동으로 Nil로 초기화)
-
-![week7-3](/assets/img/post/24-10-16/3.png)
-> 초기 값이 없을 경우 에러가 발생한다.
+* 상속된 클래스는 부모 클래스의 모든 기능을 상속받으며 자신만의 기능을 추가
+* 상속받은 클래스들을 하위 클래스 (Sub-Class) 또는 자식 클래스 (Child-Class)
+* 하위 클래스가 상속받은 클래스는 부모 클래스 (Parent-Class) 또는 상위 클래스 (Super-Class)
+* 단일 상속 (Single Inheritance)
+    + Swift에서 하위 클래스는 단 하나의 부모 클래스만 상속받을 수 있음.
 
 ```swift
 class Man {
-    var age: Int?
-    var height: Int?
+    var age: Int = 1
+    var: weight: Double = 3.5
+
+    func display() {
+        print("나이=\(age), 몸무게=\(weight)")
+    }
+
+    init(age: Int, weight: Double) {
+        self.age = age
+        self.weight = weight
+    }
 }
+
+class Student: Man {
+    // 비어있지만 Man 클래스의 모든 것을 가지고 있음.
+}
+
+var kim: Man = Man(age: 10, weight: 20.5)
+kim.display() // 나이=10, 몸무게=20.5
+
+var lee: Student = Student(age: 10, weight: 20.5)
+lee.display() // 나이=10, 몸무게=20.5
+print(lee.age) // 10
 ```
 
-> 옵셔널 변수로 선언할 시 자동으로 Nil로 초기화되므로 에러가 발생하지 않는다.
-
-* 프로퍼티(Property)는 저장 프로퍼티 (Stored Property) / 계산 프로퍼티 (Computed Property)로 나누어짐.
-
-### 인스턴스 생성 후 메서드와 프로퍼티에 접근
+* 부모 메서드 호출 시에는 Super 키워드를 사용
 
 ```swift
 class Man {
@@ -271,10 +501,27 @@ class Man {
     func display() {
         print("나이=\(age), 몸무게=\(weight)")
     }
+
+    init(age: Int, weight: Double) {
+        self.age = age
+        self.weight = weight
+    }
 }
 
-var kim: Man = Man()
-kim.display() // 나이=1, 몸무게=3.5
-print(kim.age) // 1
-```
+class Student: Man {
+    var name: String
 
+    func displayS() {
+        print("이름=\(name), 나이=\(age), 몸무게=\(weight)")
+    }
+
+    init(age: Int, weight: Double, name: String) {
+        self.name = name
+        super.init(age: age, weight: weight)
+    }
+}
+
+var lee: Student = Student(age: 20, weight: 65.2, name: "홍길동")
+lee.displayS() // 이름=홍길동, 나이=20, 몸무게=65.2
+lee.display() // 나이=20, 몸무게=65.2
+```
