--- a/_posts/2024-10-16-iOS-week7.md
+++ b/_posts/2024-10-16-iOS-week7.md
@@ -525,3 +525,111 @@ var lee: Student = Student(age: 20, weight: 65.2, name: "홍길동")
 lee.displayS() // 이름=홍길동, 나이=20, 몸무게=65.2
 lee.display() // 나이=20, 몸무게=65.2
 ```
+
+* 부모와 자식에 같은 메서드가 있으면 자식이 우선됨.
+
+```swift
+class Man {
+    var age: Int = 1
+    var weight: Double = 3.5
+
+    func display() {
+        print("나이=\(age), 몸무게=\(weight)")
+    }
+
+    init(age: Int, weight: Double) {
+        self.age = age
+        self.weight = weight
+    }
+}
+
+class Student: Man {
+    var name: String
+
+    override func display() {
+        print("이름=\(name), 나이=\(age), 몸무게=\(weight)")
+    }
+
+    init(age: Int, weight: Double, name: String) {
+        self.name = name
+        super.init(age: age, weight: weight)
+    }
+}
+
+var lee: Student = Student(age: 20, weight: 65.2, name: "홍길동")
+lee.display() // 이름=홍길동, 나이=20, 몸무게=65.2
+```
+
+## Failable Initializers (실패 가능한 생성자)
+
+> 키워드: init? / init!
+
+* 유효한 값을 받지 못한 경우 인스턴스를 만들 수 없고 nil을 리턴 함.
+* init?으로 만든 인스턴스는 옵셔널 형으로 생성되어, 사용하기 위해선 옵셔널을 언래핑해야함.
+
+```swift
+class Man {
+    var age: Int
+    var weight: Double
+
+    func display() {
+        print("나이=\(age), 몸무게=\(weight)")
+    }
+
+    init?(age: Int, weight: Double) {
+        if age <= 0 {
+            return nil
+        } else {
+            self.age = age
+        }
+        self.weight = weight
+    }
+}
+
+var kim: Man = Man(age: 10, weight: 20.5)
+kim.display()
+
+var lee: Man = Man(age: 0, weight: 3.5)
+lee.display()
+
+// 에러 발생
+```
+
+```swift
+class Man {
+    var age: Int
+    var weight: Double
+
+    func display() {
+        print("나이=\(age), 몸무게=\(weight)")
+    }
+
+    init?(age: Int, weight: Double) {
+        if age <= 0 {
+            return nil
+        } else {
+            self.age = age
+        }
+        self.weight = weight
+    }
+}
+
+var kim: Man? = Man(age: 1, weight: 3.5) // 옵셔널 형으로 선언
+// 옵셔널 바인딩
+if let kim1 = kim {
+    kim1.display()
+}
+
+// 인스턴스 생성과 동시에 옵셔널 바인딩
+if let kim2 = Man(age: 2, weight: 5.5) {
+    kim2.display()
+}
+
+// 인스턴스 생성하면서 바로 강제 언래핑
+var kim3: Man = Man(age: 3, weight: 7.5)!
+kim3.display()
+
+// 옵셔널 인스턴스를 사용 시 강제 언래핑
+var kim4: Man? = Man(age: 4, weight: 10.5)
+kim4!.display()
+```
