--- a/_posts/2024-10-16-iOS-week7.md
+++ b/_posts/2024-10-16-iOS-week7.md
@@ -593,7 +593,10 @@ var lee: Man = Man(age: 0, weight: 3.5)
 lee.display()
 
 // 에러 발생
+// error: value of optional type 'Man?' must be unwrapped to a value of type 'Man'
 ```
+
+* Failable Initializer가 있는 클래스의 인스턴스 생성을 하기 위해선 옵셔널 형으로 선언 후 언래핑을 해야함.
 
 ```swift
 class Man {
@@ -625,11 +628,46 @@ if let kim2 = Man(age: 2, weight: 5.5) {
     kim2.display()
 }
 
-// 인스턴스 생성하면서 바로 강제 언래핑
+// 인스턴스 생성하면서 바로 강제 언래핑 / 주의: 권장되지 않음.
 var kim3: Man = Man(age: 3, weight: 7.5)!
 kim3.display()
 
-// 옵셔널 인스턴스를 사용 시 강제 언래핑  
+var lee: Man = Man(age: 0, weight: 3.5)!
+lee.display() // Crash 발생
+
+// 옵셔널 인스턴스를 사용 시 강제 언래핑  / 주의: 권장되지 않음.
 var kim4: Man? = Man(age: 4, weight: 10.5)
 kim4!.display()
+
+var lee2: Man? = Man(age: 0, weight: 3.5)
+lee2!.display() // Crash 발생
+```
+
+### 나이와 몸무게가 음수일 경우 nil 리턴하는 Failable Initializer
+
+```swift
+class Man {
+    var age: Int
+    var weight: Double
+
+    func display() {
+        print("나이=\(age), 몸무게=\(weight)")
+    }
+
+    init?(age: Int, weight: Int) {
+        if (age < 0 || weight < 0.0) {
+            return nil
+        } else {
+            self.age = age
+            self.weight = weight
+        }
+    }
+}
+
+var kim: Man? = Man(age: -1, weight: -3.5)
+if (let kim1 = kim) {
+    kim1.display()
+}
+
+//결과: nil
 ```
