--- a/_posts/2024-10-30-iOS-week9.md
+++ b/_posts/2024-10-30-iOS-week9.md
@@ -191,3 +191,9 @@ label.font = UIFont.systemFont(ofSize: 16)
 ```swift
 label.textColor = UIColor.black
 ```
+
+## Break Point
+
+- 디버깅 용도로 사용
+- 행 번호 왼쪽을 클릭하면 파란색 오각형의 브레이크 포인트 생성되고 해당 줄에서 실행이 정지됨
+- 브레이크 포인트를 오른쪽으로 드래그하면 삭제됨
