--- a/_posts/2024-11-06-iOS-week10.md
+++ b/_posts/2024-11-06-iOS-week10.md
@@ -13,4 +13,113 @@ tags: [college, ios, swift]
 - Assets의 AppIcon 아이템에 이미지를 넣은 후 빌드
     + 이미지는 1024x1024px 이어야 함.
 
+## 리셋 버튼 추가
 
+![week10-2](/assets/img/post/24-11-06/2.png)
+
+- Button 추가 후 ViewController로 Action 유형 연결
+
+```swift
+@IBAction func btnReset(_ sender: UIButton) {
+    lblHello.textColor = .brown // 리셋 버튼 누르면 lblHello의 텍스트 컬러를 brown으로 변경
+    lblHello.text = "안녕하세요!" // lblHello의 텍스트를 "안녕하세요!"로 변경
+    txtName.text = "" // txtName의 입력 폼 내용을 공백으로 초기화
+}
+```
+
+## UILabel에서 가장 많이 사용하는 예제
+
+- UILabel 생성 및 설정
+
+```swift
+import UIKit
+
+class ViewController: UIViewController {
+    override func viewDidLoad() {
+        super.viewDidLoad()
+
+        // UILabel 생성
+        let label = UILabel()
+
+        // UILabel 속성 설정
+        label.text = "안녕하세요, UIKit!"
+        label.textColor = .black
+        label.font = UIFont.systemFont(ofSize: 24)
+        label.textAlignment = .center
+        label.numberOfLines = 0 // 여러 줄 가능
+
+        // UILabel의 프레임 설정
+        label.frame = CGRect(x: 20, y: 100, width: 280, height: 100)
+
+        // UILabel을 뷰에 추가
+        self.view.addSubview(label)
+    }
+}
+```
+
+- 오토 레이아웃을 사용한 UILabel 설정
+
+```swift
+import UIKit
+
+class ViewController: UIViewController {
+    override func viewDidLoad() {
+        super.viewDidLoad()
+
+        // UILabel 생성
+        let label = UILabel()
+        label.translatesAutoresizingMaskIntoConstraints = false // 오토 레이아웃 사용
+
+        // UILabel 속성 설정
+        label.text = "안녕하세요, UIKit!"
+        label.textColor = .black
+        label.font = UIFont.systemFont(ofSize: 24)
+        label.textAlignment = .center
+        label.numberOfLines = 0 // 여러 줄 가능
+
+        // UILabel을 뷰에 추가
+        self.view.addSubview(label)
+
+        // 오토 레이아웃 제약조건 설정
+        NSLayoutConstraint.activate([
+            label.centerXAnchor.constraint(equalTo: view.centerXAnchor),
+            label.centerYAnchor.constraint(equalTo: view.centerYAnchor),
+            label.leadingAnchor.constraint(equalTo: view.leadingAnchor, constant: 20),
+            label.trailingAnchor.constraint(equalTo: view.trailingAnchor, constant: -20)
+        ])
+    }
+}
+```
+
+## UILabel Image View
+
+![week10-3](/assets/img/post/24-11-06/3.png)
+
+- 이미지의 종횡비 유지를 위해 Content Mode는 Aspect Fit으로 설정하는게 가장 일반적임
+
+## Count Up-Down App
+
+![week10-4](/assets/img/post/24-11-06/4.png)
+
+![week10-5](/assets/img/post/24-11-06/5.png)
+
+```swift
+class ViewController: UIViewController {
+    @IBOutlet weak var lblNumber: UILabel!
+    var x: Int = 0
+
+    @IBAction func btnUp(_ sender: UIButton) {
+        x += 1
+        lblNumber.text = String(x)
+    }
+
+    @IBAction Func btnDown(_ sender: UIButton) {
+        x -= 1
+        lblNumber.text = String(x)
+    }
+}
+```
+
+### Connections Inspector
+
+![week10-6](/assets/img/post/24-11-06/6.png)
