--- a/_posts/2024-11-06-iOS-week10.md
+++ b/_posts/2024-11-06-iOS-week10.md
@@ -123,3 +123,28 @@ class ViewController: UIViewController {
 ### Connections Inspector
 
 ![week10-6](/assets/img/post/24-11-06/6.png)
+
+## 출처
+
+Do it! 스위프트로 아이폰 앱 만들기 입문, 송호정, 이범근 저,이지스퍼블리싱, 2023년 01월 20일
+https://www.yes24.com/Product/Goods/116918114
+https://github.com/doitswift/example
+----------------------------------------
+02 Hello World 앱 만들며 Xcode에 완벽 적응하기
+03 원하는 이미지 화면에 출력하기 - 이미지 뷰
+04 데이트 피커 사용해 날짜 선택하기
+05 피커 뷰 사용해 원하는 항목 선택하기
+06 얼럿 사용해 경고 표시하기
+07 웹 뷰로 간단한 웹 브라우저 만들기
+08 맵 뷰로 지도 나타내기
+09 페이지 이동하기 - 페이지 컨트롤
+10 탭 바 컨트롤러 이용해 여러 개의 뷰 넣기
+11 내비게이션 컨트롤러 이용해 화면 전환하기
+12 테이블 뷰 컨트롤러 이용해 할 일 목록 만들기
+13 음악 재생하고 녹음하기
+14 비디오 재생 앱 만들기
+15 카메라와 포토 라이브러리에서 미디어 가져오기
+16 코어 그래픽스로 화면에 그림 그리기
+17 탭과 터치 사용해 스케치 앱 만들기
+18 스와이프 제스처 사용하기
+19 핀치 제스처 사용해 사진을 확대/축소하기
