--- a/_posts/2024-11-06-iOS-week10.md
+++ b/_posts/2024-11-06-iOS-week10.md
@@ -124,6 +124,158 @@ class ViewController: UIViewController {
 
 ![week10-6](/assets/img/post/24-11-06/6.png)
 
+## Apps
+
+### Ramp Image On / Off
+
+```swift
+import UIKit // UIKit 프레임워크를 임포트하여 UI 구성 요소를 사용할 수 있게 함
+
+class ViewController: UIViewController { // ViewController 클래스를 정의, UIViewController를 상속
+    var isZoom = false // 이미지 확대 여부를 나타내는 변수
+    var imgOn: UIImage? // '켜짐' 상태의 이미지 변수
+    var imgOff: UIImage? // '꺼짐' 상태의 이미지 변수
+    @IBOutlet var imgView: UIImageView! // 이미지 뷰 아울렛
+    @IBOutlet var btnResize: UIButton! // 버튼 아울렛
+    
+    override func viewDidLoad() { // 뷰가 로드될 때 호출되는 메서드
+        super.viewDidLoad() // 부모 클래스의 viewDidLoad 호출
+        // 추가적인 설정을 여기서 수행
+        
+        imgOn = UIImage(named: "lamp_on.png") // '켜짐' 이미지를 로드하여 imgOn에 저장
+        imgOff = UIImage(named: "lamp_off.png") // '꺼짐' 이미지를 로드하여 imgOff에 저장
+        
+        imgView.image = imgOn // 이미지 뷰에 '켜짐' 이미지 설정
+    }
+    
+    @IBAction func btnResizeImage(_ sender: UIButton) { // 버튼 클릭 시 호출되는 메서드
+        let scale: CGFloat = 2.0 // 확대/축소 비율 설정
+        var newWidth: CGFloat, newHeight: CGFloat // 새로운 너비와 높이 변수 선언
+        
+        if (isZoom) { // 현재 상태가 확대일 경우
+            newWidth = imgView.frame.width / scale // 너비를 축소
+            newHeight = imgView.frame.height / scale // 높이를 축소
+            
+            btnResize.setTitle("확대", for: .normal) // 버튼 제목을 '확대'로 변경
+        }
+        else { // 현재 상태가 축소일 경우
+            newWidth = imgView.frame.width * scale // 너비를 확대
+            newHeight = imgView.frame.height * scale // 높이를 확대
+            
+            btnResize.setTitle("축소", for: .normal) // 버튼 제목을 '축소'로 변경
+        }
+        
+        imgView.frame.size = CGSize(width: newWidth, height: newHeight) // 이미지 뷰의 크기를 새로 설정
+        
+        isZoom = !isZoom // 확대/축소 상태를 반전
+    }
+    
+    @IBAction func switchImageOnOff(_ sender: UISwitch) { // 스위치 변경 시 호출되는 메서드
+        if sender.isOn { // 스위치가 켜져 있을 경우
+            imgView.image = imgOn // 이미지 뷰에 '켜짐' 이미지 설정
+        } else { // 스위치가 꺼져 있을 경우
+            imgView.image = imgOff // 이미지 뷰에 '꺼짐' 이미지 설정
+        }
+    }
+}
+```
+
+### Alert View
+
+![week10-7](/assets/img/post/24-11-06/7.png)
+
+### Web View
+
+![week10-8](/assets/img/post/24-11-06/8.png)
+
+```swift
+import UIKit
+import WebKit
+class ViewController: UIViewController, WKNavigationDelegate {
+    @IBOutlet var txtUrl: UITextField!
+    @IBOutlet var myWebView: WKWebView!
+    @IBOutlet var myActivityIndicator: UIActivityIndicatorView!
+    
+    func loadWebPage(_ url: String) {
+        let myUrl = URL(string: url)
+        let myRequest = URLRequest(url: myUrl!)
+        myWebView.load(myRequest)
+    }
+    
+    override func viewDidLoad() {
+        super.viewDidLoad()
+        // Do any additional setup after loading the view.
+        myWebView.navigationDelegate = self
+        loadWebPage("https://Panther3652.github.io")
+    }
+    
+    func webView(_ webView: WKWebView, didCommit navigation: WKNavigation!) {
+        myActivityIndicator.startAnimating()
+        myActivityIndicator.isHidden = false
+    }
+    
+    func webView(_ webView: WKWebView, didFinish navigation: WKNavigation!) {
+        myActivityIndicator.stopAnimating()
+        myActivityIndicator.isHidden = true
+    }
+    
+    func webView(_ webView: WKWebView, didFail navigation: WKNavigation!, withError error: Error) {
+        myActivityIndicator.stopAnimating()
+        myActivityIndicator.isHidden = true
+    }
+    
+    func checkUrl(_ url: String) -> String {
+       var strUrl = url
+        let flag = strUrl.hasPrefix("http://")
+        if !flag {
+            strUrl = "http://" + strUrl
+        }
+        return strUrl
+    }
+    @IBAction func btnGotoUrl(_ sender: UIButton) {
+        let myUrl = checkUrl(txtUrl.text!)
+        txtUrl.text = ""
+        loadWebPage(myUrl)
+    }
+    
+    @IBAction func btnGoSite1(_ sender: UIButton) {
+        loadWebPage("https://google.co.kr")
+    }
+    
+    @IBAction func btnGoSite2(_ sender: UIButton) {
+        loadWebPage("https://youtube.com")
+    }
+    
+    @IBAction func btnLoadHtmlString(_ sender: UIButton) {
+        let htmlString = "<h1> HTML String </h1><p> String 변수를 이용한 웹페이지 </p> <p><a href=\"https://Panther3652.github.io\">블로그</a>로 이동</p>"
+        myWebView.loadHTMLString(htmlString, baseURL: nil)
+    }
+    
+    @IBAction func btnLoadHtmlFile(_ sender: UIButton) {
+        let filePath = Bundle.main.path(forResource: "htmlView", ofType: "html")
+        let myUrl = URL(fileURLWithPath: filePath!)
+        let myRequest = URLRequest(url: myUrl)
+        myWebView.load(myRequest)
+    }
+    
+    @IBAction func btnStop(_ sender: UIBarButtonItem) {
+        myWebView.stopLoading()
+    }
+    
+    @IBAction func btnReload(_ sender: UIBarButtonItem) {
+        myWebView.reload()
+    }
+    
+    @IBAction func btnGoBack(_ sender: UIBarButtonItem) {
+        myWebView.goBack()
+    }
+    
+    @IBAction func btnGoForward(_ sender: UIBarButtonItem) {
+        myWebView.goForward()
+    }   
+}
+```
+
 ## 출처
 
 Do it! 스위프트로 아이폰 앱 만들기 입문, 송호정, 이범근 저,이지스퍼블리싱, 2023년 01월 20일
