--- a/_posts/2024-11-06-iOS-week10.md
+++ b/_posts/2024-11-06-iOS-week10.md
@@ -276,6 +276,8 @@ class ViewController: UIViewController, WKNavigationDelegate {
 }
 ```
 
+- 앱에서 HTML 파일 혹은 웹 사이트를 보여주기 위한 내장형 웹 브라우저
+
 ## 출처
 
 Do it! 스위프트로 아이폰 앱 만들기 입문, 송호정, 이범근 저,이지스퍼블리싱, 2023년 01월 20일
