--- a/_posts/2024-11-06-iOS-week10.md
+++ b/_posts/2024-11-06-iOS-week10.md
@@ -276,6 +276,96 @@ class ViewController: UIViewController, WKNavigationDelegate {
 }
 ```
 
+### Map View
+
+![week10-9](/assets/img/post/24-11-06/9.png)
+
+![week10-10](/assets/img/post/24-11-06/10.png)
+
+```swift
+import UIKit // UIKit 프레임워크를 임포트하여 사용자 인터페이스를 구성
+import MapKit // MapKit 프레임워크를 임포트하여 지도 관련 기능 사용
+
+class ViewController: UIViewController, CLLocationManagerDelegate { // ViewController 클래스 정의, CLLocationManagerDelegate 프로토콜 채택
+    @IBOutlet var myMap: MKMapView! // MKMapView 아울렛 연결, 지도 표시
+    @IBOutlet var lblLocationInfo1: UILabel! // UILabel 아울렛 연결, 위치 정보 표시
+    @IBOutlet var lblLocationInfo2: UILabel! // UILabel 아울렛 연결, 추가 위치 정보 표시
+    
+    let locationManager = CLLocationManager() // CLLocationManager 인스턴스 생성, 위치 업데이트 관리
+    
+    override func viewDidLoad() { // 뷰가 로드될 때 호출되는 메서드
+        super.viewDidLoad() // 부모 클래스의 viewDidLoad 호출
+        lblLocationInfo1.text = "" // 첫 번째 레이블 초기화
+        lblLocationInfo2.text = "" // 두 번째 레이블 초기화
+        locationManager.delegate = self // 위치 관리자 델리게이트 설정
+        locationManager.desiredAccuracy = kCLLocationAccuracyBest // 위치 정확도 설정
+        locationManager.requestWhenInUseAuthorization() // 앱 사용 중 위치 권한 요청
+        locationManager.startUpdatingLocation() // 위치 업데이트 시작
+        myMap.showsUserLocation = true // 사용자 위치 표시 활성화
+    }
+    
+    // 주어진 위도와 경도로 위치 이동 및 좌표 반환
+    func goLocation(latitudeValue: CLLocationDegrees, longitudeValue: CLLocationDegrees, delta span: Double) -> CLLocationCoordinate2D {
+        let pLocation = CLLocationCoordinate2DMake(latitudeValue, longitudeValue) // CLLocationCoordinate2D 객체 생성
+        let spanValue = MKCoordinateSpan(latitudeDelta: span, longitudeDelta: span) // 지도 스팬 설정
+        let pRegion = MKCoordinateRegion(center: pLocation, span: spanValue) // 지도 지역 설정
+        myMap.setRegion(pRegion, animated: true) // 지도를 지정된 지역으로 이동
+        return pLocation // 위치 반환
+    }
+    
+    // 주어진 위도, 경도에 주석 추가
+    func setAnnotation(latitudeValue: CLLocationDegrees, longitudeValue: CLLocationDegrees, delta span: Double, title strTitle: String, subtitle strSubtitle: String) {
+        let annotation = MKPointAnnotation() // 주석 객체 생성
+        annotation.coordinate = goLocation(latitudeValue: latitudeValue, longitudeValue: longitudeValue, delta: span) // 주석 좌표 설정
+        annotation.title = strTitle // 주석 제목 설정
+        annotation.subtitle = strSubtitle // 주석 부제목 설정
+        myMap.addAnnotation(annotation) // 지도에 주석 추가
+    }
+    
+    // 위치 업데이트 시 호출되는 메서드
+    func locationManager(_ manager: CLLocationManager, didUpdateLocations locations: [CLLocation]) {
+        let pLocation = locations.last // 가장 최근 위치 객체 가져오기
+        _ = goLocation(latitudeValue: (pLocation?.coordinate.latitude)!, longitudeValue: (pLocation?.coordinate.longitude)!, delta: 0.01) // 지도 이동
+        CLGeocoder().reverseGeocodeLocation(pLocation!, completionHandler: { // 역지오코딩을 통해 위치 정보 가져오기
+            (placemarks, error) -> Void in // 결과 핸들러
+            let pm = placemarks!.first // 첫 번째 플래이스마크 가져오기
+            let country = pm!.country // 국가 정보 가져오기
+            var address: String = country! // 주소 초기화
+            if pm!.locality != nil { // 지역 정보가 있는 경우
+                address += " " // 공백 추가
+                address += pm!.locality! // 지역 추가
+            }
+            if pm!.thoroughfare != nil { // 도로명 정보가 있는 경우
+                address += " " // 공백 추가
+                address += pm!.thoroughfare! // 도로명 추가
+            }
+            
+            self.lblLocationInfo1.text = "현재 위치" // 현재 위치 레이블 업데이트
+            self.lblLocationInfo2.text = address // 주소 레이블 업데이트
+        })
+        
+        locationManager.stopUpdatingLocation() // 위치 업데이트 중지
+    }
+    
+    // 세그먼트 컨트롤 변화에 따른 위치 변경 처리
+    @IBAction func sgChangeLocation(_ sender: UISegmentedControl) {
+        if sender.selectedSegmentIndex == 0 { // 첫 번째 세그먼트 선택
+            self.lblLocationInfo1.text = "" // 첫 번째 레이블 초기화
+            self.lblLocationInfo2.text = "" // 두 번째 레이블 초기화
+            locationManager.startUpdatingLocation() // 위치 업데이트 시작
+        } else if sender.selectedSegmentIndex == 1 { // 두 번째 세그먼트 선택
+            setAnnotation(latitudeValue: 37.6314191, longitudeValue: 127.0548249, delta: 0.05, title: "인덕대학교", subtitle: "서울특별시 노원구 월계동 648-7") // 인덕대학교 주석 추가
+            self.lblLocationInfo1.text = "보고 계신 위치" // 레이블 업데이트
+            self.lblLocationInfo2.text = "인덕대학교" // 레이블 업데이트
+        } else if sender.selectedSegmentIndex == 2 { // 세 번째 세그먼트 선택
+            setAnnotation(latitudeValue: 37.556876, longitudeValue: 126.914066, delta: 0.1, title: "이지스퍼블리싱", subtitle: "서울시 마포구 잔다리로 109 이지스 빌딩") // 이지스퍼블리싱 주석 추가
+            self.lblLocationInfo1.text = "보고 계신 위치" // 레이블 업데이트
+            self.lblLocationInfo2.text = "이지스퍼블리싱 출판사 " // 레이블 업데이트
+        }
+    }
+}
+```
+
 - 앱에서 HTML 파일 혹은 웹 사이트를 보여주기 위한 내장형 웹 브라우저
 
 ## 출처
