--- a/_posts/2024-11-13-iOS-week11.md
+++ b/_posts/2024-11-13-iOS-week11.md
@@ -189,6 +189,12 @@ class ViewController: UIViewController {
 }
 ```
 
+## BMI 앱
+
+### 기존 앱 분석
+
+https://apps.apple.com/us/app/bmi-calculator-weight-loss/id666822519
+
 ## 출처
 
 Do it! 스위프트로 아이폰 앱 만들기 입문, 송호정, 이범근 저,이지스퍼블리싱, 2023년 01월 20일
