--- a/_posts/2024-11-13-iOS-week11.md
+++ b/_posts/2024-11-13-iOS-week11.md
@@ -195,6 +195,14 @@ class ViewController: UIViewController {
 
 https://apps.apple.com/us/app/bmi-calculator-weight-loss/id666822519
 
+### 앱 개발 절차
+
+![week11-5](/assets/img/post/24-11-13/5.png)
+
+### IBOutlet IBAction 생성 및 확인
+
+![week11-6](/assets/img/post/24-11-13/6.png)
+
 ## 출처
 
 Do it! 스위프트로 아이폰 앱 만들기 입문, 송호정, 이범근 저,이지스퍼블리싱, 2023년 01월 20일
