--- a/_posts/2024-11-20-iOS-week12.md
+++ b/_posts/2024-11-20-iOS-week12.md
@@ -88,3 +88,195 @@ tags: [college, ios, swift]
 ```
 
 - 문제점: weight와 height 상수 값 할당 중에 강제 언래핑을 통해 할당받으므로 nil값을 받을 경우 Crash 발생
+
+## 프로그램 결과
+
+![week12-3](/assets/img/post/24-11-20/3.png)
+
+![week12-4](/assets/img/post/24-11-20/4.png)
+
+### 소스코드
+
+```swift
+import UIKit
+
+class ViewController: UIViewController {
+    // IBOutlet 연결: 사용자의 키와 체중을 입력받을 텍스트 필드와 결과를 표시할 레이블
+    @IBOutlet weak var txtHeight: UITextField!
+    @IBOutlet weak var txtWeight: UITextField!
+    @IBOutlet weak var lblResult: UILabel!
+    
+    // BMI 계산을 위한 액션 메서드
+    @IBAction func calcBmi(_ sender: UIButton) {
+        // 입력 필드가 비어 있는지 확인
+        if txtHeight.text == "" || txtWeight.text == "" {
+            // 결과 레이블의 배경색과 글자색 설정
+            lblResult.backgroundColor = UIColor(displayP3Red: 0.0, green: 0.0, blue: 0.0, alpha: 0.0)
+            lblResult.textColor = .red
+            lblResult.text = "키와 체중을 입력하세요!" // 경고 메시지
+            return
+        } else {
+            // 입력된 체중과 키를 Double 형으로 변환
+            let weight = Double(txtWeight.text!)!
+            let height = Double(txtHeight.text!)!
+            // BMI 계산
+            let bmi = weight / (height * height * 0.0001)
+            // 소수점 한 자리로 포맷팅
+            let shortenedBmi = String(format: "%.1f", bmi)
+            var body = "" // 체중 상태를 저장할 변수
+            var color = UIColor.white // 배경색 초기화
+            
+            // BMI 값에 따라 체중 상태 판별 및 색상 설정
+            if bmi >= 40 {
+                color = UIColor(displayP3Red: 1.0, green: 0.0, blue: 0.0, alpha: 1.0) // 빨간색
+                lblResult.textColor = .black
+                body = "3단계 비만"
+            } else if bmi >= 30 && bmi < 40 {
+                color = UIColor(displayP3Red: 0.7, green: 0.0, blue: 0.0, alpha: 1.0) // 어두운 빨간색
+                lblResult.textColor = .white
+                body = "2단계 비만"
+            } else if bmi >= 25 && bmi < 30 {
+                color = UIColor(displayP3Red: 0.4, green: 0.0, blue: 0.0, alpha: 1.0) // 갈색
+                lblResult.textColor = .white
+                body = "1단계 비만"
+            } else if bmi >= 18.5 && bmi < 25 {
+                color = UIColor(displayP3Red: 0.0, green: 0.0, blue: 1.0, alpha: 1.0) // 파란색
+                lblResult.textColor = .white
+                body = "정상"
+            } else {
+                color = UIColor(displayP3Red: 0.0, green: 1.0, blue: 0.0, alpha: 1.0) // 초록색
+                lblResult.textColor = .black
+                body = "저체중"
+            }
+            
+            // 결과 레이블의 배경색 및 모양 설정
+            lblResult.backgroundColor = color
+            lblResult.clipsToBounds = true // 경계선이 레이블 크기를 넘지 않도록 설정
+            lblResult.layer.cornerRadius = 10 // 둥근 모서리
+            
+            // 결과 텍스트 설정
+            lblResult.text = "BMI: \(shortenedBmi), 판정: \(body)"
+        }
+    }
+    
+    // 뷰가 로드될 때 호출되는 메서드
+    override func viewDidLoad() {
+        super.viewDidLoad()
+    }
+}
+```
+
+## UISwitch
+
+- 사용자가 두 가지 상태 중 하나를 선택할 수 있도록 하는 간단한 스위치
+
+```swift
+import UIKit
+
+class ViewController: UIViewController {
+
+    let mySwitch = UISwitch()
+    let statusLabel = UILabel()
+
+    override func viewDidLoad() {
+        super.viewDidLoad()
+        
+        // 스위치 설정
+        mySwitch.center = view.center
+        mySwitch.addTarget(self, action: #selector(switchChanged), for: .valueChanged)
+        view.addSubview(mySwitch)
+        
+        // 라벨 설정
+        statusLabel.frame = CGRect(x: 0, y: mySwitch.frame.maxY + 20, width: 200, height: 50)
+        statusLabel.textAlignment = .center
+        statusLabel.text = "스위치 꺼짐"
+        view.addSubview(statusLabel)
+    }
+
+    @objc func switchChanged(mySwitch: UISwitch) {
+        if mySwitch.isOn {
+            statusLabel.text = "스위치 켜짐"
+        } else {
+            statusLabel.text = "스위치 꺼짐"
+        }
+    }
+}
+```
+
+## UISegmentedControl
+
+- 여러 개의 선택지를 제공하고 사용자가 선택할 수 있도록 하는 UI 요소
+
+```swift
+import UIKit
+
+class ViewController: UIViewController {
+
+    let segmentedControl = UISegmentedControl(items: ["옵션 1", "옵션 2", "옵션 3"])
+    let statusLabel = UILabel()
+
+    override func viewDidLoad() {
+        super.viewDidLoad()
+        
+        // 세그먼트 컨트롤 설정
+        segmentedControl.selectedSegmentIndex = 0 // 기본 선택값
+        segmentedControl.center = view.center
+        segmentedControl.addTarget(self, action: #selector(segmentChanged), for: .valueChanged)
+        view.addSubview(segmentedControl)
+        
+        // 라벨 설정
+        statusLabel.frame = CGRect(x: 0, y: segmentedControl.frame.maxY + 20, width: 300, height: 50)
+        statusLabel.textAlignment = .center
+        statusLabel.text = "선택: 옵션 1"
+        view.addSubview(statusLabel)
+    }
+
+    @objc func segmentChanged(segmentedControl: UISegmentedControl) {
+        switch segmentedControl.selectedSegmentIndex {
+        case 0:
+            statusLabel.text = "선택: 옵션 1"
+        case 1:
+            statusLabel.text = "선택: 옵션 2"
+        case 2:
+            statusLabel.text = "선택: 옵션 3"
+        default:
+            break
+        }
+    }
+}
+```
+
+## Tab Bar Controller
+
+![week12-5](/assets/img/post/24-11-20/5.png)
+
+### Tab Bar HIG
+
+1. 기본 요소: 탭 바는 앱의 주요 인터페이스를 탐색하기 위한 기본 요소로, 화면 하단에 위치합니다. 일반적으로 3~5개의 탭을 포함합니다.
+
+2. 아이콘과 텍스트: 각 탭은 직관적인 아이콘과 선택적으로 텍스트 레이블을 사용하여 기능을 명확히 전달해야 합니다. 아이콘은 간단하고 이해하기 쉬워야 합니다.
+
+3. 활성화 상태: 현재 선택된 탭은 시각적으로 강조되어야 하며, 일반적으로 색상이 다르게 표시됩니다.
+
+4. 일관성: 앱 내의 탭 바는 모든 화면에서 일관된 위치와 스타일을 유지해야 하며, 사용자가 쉽게 탐색할 수 있도록 해야 합니다.
+
+5. 상호작용: 탭 바는 터치에 민감해야 하며, 탭을 누르면 부드럽고 즉각적인 피드백을 제공해야 합니다.
+
+6. 탭 수: 너무 많은 탭은 사용자가 혼란스러워할 수 있으므로, 가장 중요한 기능만 포함하는 것이 좋습니다.
+
+7. 탭 바의 숨김: 특정 화면에서는 탭 바를 숨길 수 있지만, 사용자가 쉽게 탐색할 수 있도록 해야 합니다.
+
+### Tab Bar Controller와 View Controller 연결
+
+![week12-6](/assets/img/post/24-11-20/6.png)
+
+Relationship Segue -> view controllers
+
+### Manual Segue와 Relationship Segue 차이점
+
+|항목|Manual Segue|Relationship Segue|
+|정의|개발자가 코드 또는 스토리보드에서 명시적으로 트리거하는 전환|두 뷰 컨트롤러 간의 관계를 정의하는 전환|
+|트리거 방법|코드에서 performSegue(withIdentifier:sender:) 호출|스토리보드에서 설정된 관계에 의해 자동으로 수행|
+|사용 시나리오|특정 이벤트나 조건에 따라 전환이 필요할 때 사용|뷰 컨트롤러 간의 고정된 관계가 있을 때 사용|
+|예시|버튼 클릭 시 다른 화면으로 전환|마스터-디테일 관계에서 마스터 화면에서 세부 화면으로 전환|
+|유연성|더 많은 유연성을 제공, 다양한 조건에 따라 전환 가능|관계에 따라 자동으로 연결되므로 덜 유연함|
