--- a/_posts/2024-11-27-iOS-week13.md
+++ b/_posts/2024-11-27-iOS-week13.md
@@ -75,6 +75,8 @@ class VideoViewController: UIViewController {
 
 #### present 메소드
 
+![week13-2](/assets/img/post/24-11-27/2.png)
+
 - iOS의 UIViewController 클래스에서 제공되는 메소드
 - 현재의 뷰 컨트롤러에서 다른 뷰 컨트롤러를 모달 방식으로 표시하는 데 사용
 - 사용자 인터페이스 흐름을 관리하는 데 중요한 역할을 수행
@@ -93,3 +95,32 @@ func present(_ viewControllerToPresent: UIViewController, animated flag: Bool, c
     + Bool 타입 값, true로 설정하면 뷰 컨트롤러가 표시될 때 애니메이션 효과 적용, false로 설정하면 애니메이션 없이 즉시 표시
 - completion
     + 선택적 클로저, 모달 뷰 컨트롤러가 표시된 후 실행될 코드를 포함할 수 있으며 모달 표시가 완료된 후에 호출
+
+![week13-3](/assets/img/post/24-11-27/3.png)
+
+![week13-4](/assets/img/post/24-11-27/4.png)
+
+#### present 메소드 사용 방식의 차이점
+
+```swift
+present(playerController, animted:true)
+player.play()
+```
+
+- present 메소드가 비동기적으로 작동하며 playerController가 화면에 나타나기 전에 player.play()가 호출될 수 있음
+
+```swift
+self.present(playerController, animated: true)
+player.play()
+```
+
+- self 키워드를 포함하여 다른 클래스의 present를 사용하는 경우를 미연에 방지할 수 있음
+
+```swift
+present(playerController, animated: true) {
+    player.play()
+}
+```
+
+- 모달이 화면에 완전히 나타난 후에 present 메서드의 후행 클로저가 호출되므로 playerController가 화면에 나타난 후에 player.play()가 호출됨
+- 사용자에게 더 나은 경험을 제공할 수 있음
