--- a/_posts/2024-11-27-iOS-week13.md
+++ b/_posts/2024-11-27-iOS-week13.md
@@ -73,6 +73,35 @@ class VideoViewController: UIViewController {
 }
 ```
 
+```swift
+import UIKit
+import AVKit
+
+class VideoViewController: UIViewController {
+    @IBAction func playVideo(_ sender: UIButton) {
+        // 비디오 파일 경로 가져오기 (Guard Let 옵셔널 바인딩)
+        guard let videoPath = Bundle.main.path(forResource: "APT", ofType: "mp4") else {
+            return
+        }
+
+        // 비디오 파일 경로를 URL 형식으로 변환
+        let videoURL = URL(filePath: videoPath!)
+        // 비디오 URL을 사용하여 AVPlayer 인스턴스 생성
+        let player = AVPlayer(url: videoURL)
+        // AVPlayerViewController 인스턴스 생성
+        // 비디오 재생을 위한 UI 제공
+        let playerController = AVPlayerViewController()
+
+        // 생성한 AVPlayer 인스턴스를 playerController에 할당
+        playerController.player = player
+        // playerController를 현재 뷰에 모달로 표시
+        present(playerController, animated: true) {
+            // 비디오 재생 시작
+            player.play()
+        }
+    }
+}
+
 #### present 메소드
 
 ![week13-2](/assets/img/post/24-11-27/2.png)
